--- a/static/style.css
+++ b/static/style.css
@@ -20,12 +20,11 @@ body {
     align-items: center;
 }
 
-#checkbox {
+#taken {
     display: none;
 }
 
 .lever {
-    background-color: var(--lever-off);
     cursor: pointer;
 
     width: 10rem;
@@ -39,8 +38,10 @@ body {
 }
 
 .shaft {
+    transform-origin: bottom center;
+    transform: translateY(2rem) scaleY(0%);
+
     position: absolute;
-    transform: translateY(2rem);
     left: calc(50% - 0.625rem);
     right: calc(50% - 0.625rem);
     background-color: var(--lever-border);
@@ -61,10 +62,18 @@ body {
     box-shadow: 0rem 0rem 0.5rem 0.25rem rgba(0, 0, 0, 0.5);
 }
 
-#checkbox:checked ~ .lever {
+.lever-on {
     background-color: var(--lever-on);
 }
 
-#checkbox:checked ~ .lever .shaft {
-    transform: translateY(10rem) scaleY(-100%);
+.lever-on .shaft {
+    transform: translateY(2rem) scaleY(-100%);
+}
+
+.lever-off {
+    background-color: var(--lever-off);
+}
+
+.lever-off .shaft {
+    transform: translateY(2rem);
 }
