--- a/static/style.css
+++ b/static/style.css
@@ -7,16 +7,24 @@
     color-scheme: dark light;
 }
 
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
 body {
     margin: 0;
     font-family: sans-serif;
 }
 
 h1 {
+    text-align: center;
     margin-bottom: 0;
 }
 
 .container {
+    padding: 1rem;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
